--- a/index.html
+++ b/index.html
@@ -1,21 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G3 Architects</title>
-</head>
-<body class="work-sans-font">
-    <header>
-        <nav class="navbar">
-            <h3 class="brand">G3 Architects</h3>
-        </nav>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body class="work-sans-font">
+    <header class="bg-light">
+      <nav class="navbar display-flex">
+        <h3 class="brand">G3 Architects</h3>
+        <ul class="nav-links display-flex">
+          <!-- li.nav-item*4>a.nav-link -->
+          <li class="nav-item">Home      <a href="" class="nav-link text-gray"></a></li>
+          <li class="nav-item">About     <a href="" class="nav-link text-gray"></a></li>
+          <li class="nav-item">Contact us<a href="" class="nav-link text-gray"></a></li>
+          <li class="nav-item">Login     <a href="" class="nav-link text-gray"></a></li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner-content">
+            <h1 class="banner-title">Brand New Group of Architects 
+            </h1>
+            <p class="banner-description">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+            </p>
+            <button class="btn-primary">Explore More</button>
+        </div>
+            <img class="banner-img" src="/images/banner.png" alt="">
+      </div>
     </header>
     <main>
+      <section class="teams display-flex">
 
+        <div class="team-img-container">
+          <img src="/images/team2.png" alt="">
+          <img src="/images/team3.png" alt="">
+          <img src="/images/team4.png" alt="">
+          <img src="/images/team1.png" alt="">
+
+        </div>
+        <div class="our-features">
+          <h3 class="features-title">
+            <span id="quick-list" class="text-light-gray">Quick list</span> of Our <span id="features" class="">Features</span>
+          </h3>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+
+      </section>
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
