--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       </div>
     </header>
     <main>
+      <!-- teams section start -->
       <section class="teams display-flex">
 
         <div class="team-img-container">
@@ -41,14 +42,46 @@
 
         </div>
         <div class="our-features">
-          <h3 class="features-title">
-            <span id="quick-list" class="text-light-gray">Quick list</span> of Our <span id="features" class="">Features</span>
+          <h3 class="section-title">
+            <span id="quick-list" class="text-light-gray">Quick list</span> of Our <span id="features" class="text-primary">Features</span>
           </h3>
-          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+          <p class="features-description text-light-gray
+          ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
           <button class="btn-primary">Explore More</button>
         </div>
 
       </section>
+      <!-- features will enjoy -->
+       <section>
+        <h3 class="section-title">Some Facts</h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <div class="facts-container">
+          <div class="fact">
+            <img src="" alt="" class="fact-icon">
+            <h4 class="fact-number"></h4>
+            <h5 class="fact-name"></h5>
+          </div>
+          <div class="fact">
+            <img src="" alt="" class="fact-icon">
+            <h4 class="fact-number"></h4>
+            <h5 class="fact-name"></h5>
+          </div>
+          <div class="fact">
+            <img src="" alt="" class="fact-icon">
+            <h4 class="fact-number"></h4>
+            <h5 class="fact-name"></h5>
+          </div>
+          <div class="fact">
+            <img src="" alt="" class="fact-icon">
+            <h4 class="fact-number"></h4>
+            <h5 class="fact-name"></h5>
+          </div>
+        </div>
+       </section>
+       <!-- some facts -->
+        <section class="some-facts">
+
+        </section>
     </main>
     <footer></footer>
   </body>
